Implement all API and add config
- Add function to read config file
- implement all API handler
