# openapi/model_ran_info.go
@@ -1,0 +1,28 @@
+/*
+ * Edgecore 5GC
+ *
+ * Edgecore 5GC API server.  You can find out more about Edgecore 5GC at [http://5gc.edge-core.cn](http://5gc.edge-core.cn). 
+ *
+ * API version: 1.0.0
+ * Contact: jimmy_ou@edge-core.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type RanInfo struct {
+
+	RanPresent int32 `json:"ranPresent,omitempty"`
+
+	RanId GlobalRanNodeId `json:"ranId,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	AnyType string `json:"anyType,omitempty"`
+
+	Conn RanInfoConn `json:"conn,omitempty"`
+
+	SupportedTAList []RanInfoSupportedTaList `json:"supportedTAList,omitempty"`
+
+	RanUeList []RanInfoRanUeList `json:"ranUeList,omitempty"`
+}
