# openapi/model_ran_info_s_nssai_list.go
@@ -1,0 +1,18 @@
+/*
+ * Edgecore 5GC
+ *
+ * Edgecore 5GC API server.  You can find out more about Edgecore 5GC at [http://5gc.edge-core.cn](http://5gc.edge-core.cn). 
+ *
+ * API version: 1.0.0
+ * Contact: jimmy_ou@edge-core.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type RanInfoSNssaiList struct {
+
+	Sst int32 `json:"sst,omitempty"`
+
+	Sd string `json:"sd,omitempty"`
+}
